[package]
name = "untitled"
version = "0.1.0"
authors = ["afidegnum <afidegnum@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-alpha.3"
askama = "0.10.3"
actix = "0.10.0"
actix-web = "3.2.0"
deadpool-postgres = "0.5.0"
tokio = { version = "0.3.2", features = ["full"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
config = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.7.1"